<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.example.hash.records.FormRegisterUser">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_primary"
        android:alpha="0.7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@id/card_view"
        android:padding="28dp">
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        android:id="@+id/card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message46"
                android:textColor="@color/my_primary"
                android:textSize="32sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message51"
                android:alpha="0.7"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message48"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editTextUserEmail1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message26"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editTextUserName6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message5"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editTextUserBirthDate3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message7"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editTextUserTelephone4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message32"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editTextUserCPF6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|number"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message9"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editTextUserPassword5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/password_icon"/>

            <ImageView
                android:id="@+id/ic_arrow"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_check" />

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.7"
                android:text="@string/message52" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>












