<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.example.hash.logInto.FormLogin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_primary"
        android:alpha="0.7"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_above="@id/card_view"
            android:padding="28dp">

            <ImageView
                android:id="@+id/imageStarts"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/logo3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message55"
                android:textSize="25sp"
                android:textColor="#0000FF"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:cardCornerRadius="28dp"
            android:layout_marginBottom="-20dp"
            android:id="@+id/card_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="58dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message46"
                    android:textColor="@color/my_primary"
                    android:textSize="32sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message47"
                    android:alpha="0.7"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message48"
                    android:alpha="0.7"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/editTextPersonEmail1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:drawableEnd="@drawable/done_icon"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message49"
                    android:alpha="0.7"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/editTextPersonPassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:drawableEnd="@drawable/password_icon"/>

<!--                <RelativeLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content">-->

<!--                    <CheckBox-->
<!--                        android:id="@+id/rememberMe"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/message54"-->
<!--                        android:layout_centerVertical="true"-->
<!--                        android:alpha="0.7"/>-->

<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="I forgot my password"-->
<!--                        android:layout_alignParentEnd="true"-->
<!--                        android:layout_centerVertical="true"/>-->

<!--                </RelativeLayout>-->
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"/>

                <Button
                    android:id="@+id/button_login"
                    style="@android:style/Widget.Button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/button_background"
                    android:text="@string/login"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"/>

                <TextView
                    android:id="@+id/textViewCreateAnAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message50"
                    android:layout_gravity="center"
                    android:alpha="0.7"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
</RelativeLayout>












