<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hash.user.FormProfile">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/black"
            android:padding="20dp">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:src="@drawable/logo3" />

            <TextView
                android:id="@+id/textViewFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/profile_image"
                android:includeFontPadding="false"
                android:textAllCaps="true"
                android:textColor="#0000FF"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:background="@drawable/background2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_weight="0.333"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ic_home"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_home" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_weight="0.333"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ic_whats"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_whats" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_weight="0.333"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ic_post"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_post" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/message27">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:text=""
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message26">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_username_small_icon"
                    android:drawablePadding="10dp"
                    android:text=""
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message28">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_phone"
                    android:drawablePadding="10dp"
                    android:text=""
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message29">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDateBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_calendar"
                    android:drawablePadding="10dp"
                    android:text=""
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message35">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCPF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_document"
                    android:drawablePadding="10dp"
                    android:text=""
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
            <Button
                android:id="@+id/buttonLogout"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/button_background"
                android:text="Logout"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:textStyle="bold"/>

        <TextView
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Deletar Conta"
            android:layout_gravity="center"
            android:alpha="0.7"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>